grammar/generated/conditionParser.cpp

// Generated from conditionParser.g4 by ANTLR 4.12.0


#include "conditionParserVisitor.h"

#include "conditionParser.h"


using namespace antlrcpp;
using namespace antlrcpptest;

using namespace antlr4;

namespace {

struct ConditionParserStaticData final {
  ConditionParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ConditionParserStaticData(const ConditionParserStaticData&) = delete;
  ConditionParserStaticData(ConditionParserStaticData&&) = delete;
  ConditionParserStaticData& operator=(const ConditionParserStaticData&) = delete;
  ConditionParserStaticData& operator=(ConditionParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag conditionparserParserOnceFlag;
ConditionParserStaticData *conditionparserParserStaticData = nullptr;

void conditionparserParserInitialize() {
  assert(conditionparserParserStaticData == nullptr);
  auto staticData = std::make_unique<ConditionParserStaticData>(
    std::vector<std::string>{
      "spec", "bpre", "bpos", "pre_abexp_atom", "pre_aexp", "pre_abexps", 
      "pre_abexp_extend", "pre_aexps", "pre_aexp_extend", "pre_rbexp_atom", 
      "list", "pre_rexp", "pre_rbexps", "pre_rbexp_extend", "pre_rexps", 
      "pre_rexp_extend", "post_abexp_atom", "post_aexp", "post_abexps", 
      "post_abexp_extend", "post_aexps", "post_aexp_extend", "post_rbexp_atom", 
      "post_rexp", "post_rbexps", "post_rbexp_extend", "post_rexps", "post_rexp_extend", 
      "typ", "num", "simple_const", "complex_const", "var", "array", "assert_rule", 
      "ll_var"
    },
    std::vector<std::string>{
      "", "", "", "", "", "'<s'", "'<=s'", "'>s'", "'>=s'", "'='", "'+'", 
      "'-'", "'*'", "'**'", "'&'", "'!'", "'|'", "'@'", "'%'", "','", "':'", 
      "';'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'&&'", "'..'", "'''", 
      "'true'", "'eq'", "'eqmod'", "'eqsmod'", "'equmod'", "'eqsrem'", "", 
      "'slimbs'", "'const'", "'add'", "'sub'", "'mul'", "'sq'", "'umod'", 
      "'srem'", "'smod'", "'assert'", "'assume'", "'and'", "'or'", "'vars'", 
      "", "", "", "", "'uint'", "'sint'"
    },
    std::vector<std::string>{
      "", "ULTOP", "ULEOP", "UGTOP", "UGEOP", "SLTOP", "SLEOP", "SGTOP", 
      "SGEOP", "EQOP", "ADDOP", "SUBOP", "MULOP", "POWOP", "ANDOP", "NOTOP", 
      "OROP", "AT", "PERCENT", "COMMA", "Colon", "Semicolon", "LPAR", "RPAR", 
      "LBRAC", "RBRAC", "LSQUARE", "RSQUARE", "VBAR", "DOTDOT", "PRIME", 
      "TRUE", "EQ", "EQMOD", "EQSMOD", "EQUMOD", "EQSREM", "ULIMBS", "SLIMBS", 
      "CONST", "INST_ADD", "INST_SUB", "INST_MUL", "INST_SQ", "UMOD", "SREM", 
      "SMOD", "ASSERT", "ASSUME", "AND", "OR", "VARS", "INT", "HEX", "VAR", 
      "LL_VAR", "UINT", "SINT", "LINE_COMMENT_ONE", "LINE_COMMENT_TWO", 
      "C_BLOCK_COMMENT", "M_BLOCK_COMMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  conditionparserParserStaticData = staticData.release();
}

}

conditionParser::conditionParser(TokenStream *input) : conditionParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

conditionParser::conditionParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  conditionParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *conditionparserParserStaticData->atn, conditionparserParserStaticData->decisionToDFA, conditionparserParserStaticData->sharedContextCache, options);
}

conditionParser::~conditionParser() {
  delete _interpreter;
}

const atn::ATN& conditionParser::getATN() const {
  return *conditionparserParserStaticData->atn;
}

std::string conditionParser::getGrammarFileName() const {
  return "conditionParser.g4";
}

const std::vector<std::string>& conditionParser::getRuleNames() const {
  return conditionparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& conditionParser::getVocabulary() const {
  return conditionparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView conditionParser::getSerializedATN() const {
  return conditionparserParserStaticData->serializedATN;
}


//----------------- SpecContext ------------------------------------------------------------------

conditionParser::SpecContext::SpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

conditionParser::BpreContext* conditionParser::SpecContext::bpre() {
  return getRuleContext<conditionParser::BpreContext>(0);
}

conditionParser::BposContext* conditionParser::SpecContext::bpos() {
  return getRuleContext<conditionParser::BposContext>(0);
}


size_t conditionParser::SpecContext::getRuleIndex() const {
  return conditionParser::RuleSpec;
}


std::any conditionParser::SpecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitSpec(this);
  else
    return visitor->visitChildren(this);
}

conditionParser::SpecContext* conditionParser::spec() {
  SpecContext *_localctx = _tracker.createInstance<SpecContext>(_ctx, getState());
  enterRule(_localctx, 0, conditionParser::RuleSpec);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    bpre();
    setState(73);
    bpos();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BpreContext ------------------------------------------------------------------

conditionParser::BpreContext::BpreContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* conditionParser::BpreContext::LBRAC() {
  return getToken(conditionParser::LBRAC, 0);
}

conditionParser::Pre_abexp_atomContext* conditionParser::BpreContext::pre_abexp_atom() {
  return getRuleContext<conditionParser::Pre_abexp_atomContext>(0);
}

tree::TerminalNode* conditionParser::BpreContext::VBAR() {
  return getToken(conditionParser::VBAR, 0);
}

conditionParser::Pre_rbexp_atomContext* conditionParser::BpreContext::pre_rbexp_atom() {
  return getRuleContext<conditionParser::Pre_rbexp_atomContext>(0);
}

tree::TerminalNode* conditionParser::BpreContext::RBRAC() {
  return getToken(conditionParser::RBRAC, 0);
}


size_t conditionParser::BpreContext::getRuleIndex() const {
  return conditionParser::RuleBpre;
}


std::any conditionParser::BpreContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitBpre(this);
  else
    return visitor->visitChildren(this);
}

conditionParser::BpreContext* conditionParser::bpre() {
  BpreContext *_localctx = _tracker.createInstance<BpreContext>(_ctx, getState());
  enterRule(_localctx, 2, conditionParser::RuleBpre);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(conditionParser::LBRAC);
    setState(76);
    pre_abexp_atom();
    setState(77);
    match(conditionParser::VBAR);
    setState(78);
    pre_rbexp_atom();
    setState(79);
    match(conditionParser::RBRAC);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BposContext ------------------------------------------------------------------

conditionParser::BposContext::BposContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* conditionParser::BposContext::LBRAC() {
  return getToken(conditionParser::LBRAC, 0);
}

conditionParser::Post_abexp_atomContext* conditionParser::BposContext::post_abexp_atom() {
  return getRuleContext<conditionParser::Post_abexp_atomContext>(0);
}

tree::TerminalNode* conditionParser::BposContext::VBAR() {
  return getToken(conditionParser::VBAR, 0);
}

conditionParser::Post_rbexp_atomContext* conditionParser::BposContext::post_rbexp_atom() {
  return getRuleContext<conditionParser::Post_rbexp_atomContext>(0);
}

tree::TerminalNode* conditionParser::BposContext::RBRAC() {
  return getToken(conditionParser::RBRAC, 0);
}


size_t conditionParser::BposContext::getRuleIndex() const {
  return conditionParser::RuleBpos;
}


std::any conditionParser::BposContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitBpos(this);
  else
    return visitor->visitChildren(this);
}

conditionParser::BposContext* conditionParser::bpos() {
  BposContext *_localctx = _tracker.createInstance<BposContext>(_ctx, getState());
  enterRule(_localctx, 4, conditionParser::RuleBpos);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(conditionParser::LBRAC);
    setState(82);
    post_abexp_atom();
    setState(83);
    match(conditionParser::VBAR);
    setState(84);
    post_rbexp_atom();
    setState(85);
    match(conditionParser::RBRAC);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pre_abexp_atomContext ------------------------------------------------------------------

conditionParser::Pre_abexp_atomContext::Pre_abexp_atomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t conditionParser::Pre_abexp_atomContext::getRuleIndex() const {
  return conditionParser::RulePre_abexp_atom;
}

void conditionParser::Pre_abexp_atomContext::copyFrom(Pre_abexp_atomContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Pre_a_trueContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::Pre_a_trueContext::TRUE() {
  return getToken(conditionParser::TRUE, 0);
}

conditionParser::Pre_a_trueContext::Pre_a_trueContext(Pre_abexp_atomContext *ctx) { copyFrom(ctx); }


std::any conditionParser::Pre_a_trueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitPre_a_true(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Pre_a_eqmodContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::Pre_a_eqmodContext::EQMOD() {
  return getToken(conditionParser::EQMOD, 0);
}

std::vector<conditionParser::Pre_aexpContext *> conditionParser::Pre_a_eqmodContext::pre_aexp() {
  return getRuleContexts<conditionParser::Pre_aexpContext>();
}

conditionParser::Pre_aexpContext* conditionParser::Pre_a_eqmodContext::pre_aexp(size_t i) {
  return getRuleContext<conditionParser::Pre_aexpContext>(i);
}

conditionParser::Pre_a_eqmodContext::Pre_a_eqmodContext(Pre_abexp_atomContext *ctx) { copyFrom(ctx); }


std::any conditionParser::Pre_a_eqmodContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitPre_a_eqmod(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Pre_a_eqopContext ------------------------------------------------------------------

std::vector<conditionParser::Pre_aexpContext *> conditionParser::Pre_a_eqopContext::pre_aexp() {
  return getRuleContexts<conditionParser::Pre_aexpContext>();
}

conditionParser::Pre_aexpContext* conditionParser::Pre_a_eqopContext::pre_aexp(size_t i) {
  return getRuleContext<conditionParser::Pre_aexpContext>(i);
}

tree::TerminalNode* conditionParser::Pre_a_eqopContext::EQOP() {
  return getToken(conditionParser::EQOP, 0);
}

conditionParser::Pre_a_eqopContext::Pre_a_eqopContext(Pre_abexp_atomContext *ctx) { copyFrom(ctx); }


std::any conditionParser::Pre_a_eqopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitPre_a_eqop(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Pre_a_andContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::Pre_a_andContext::AND() {
  return getToken(conditionParser::AND, 0);
}

tree::TerminalNode* conditionParser::Pre_a_andContext::LSQUARE() {
  return getToken(conditionParser::LSQUARE, 0);
}

conditionParser::Pre_abexpsContext* conditionParser::Pre_a_andContext::pre_abexps() {
  return getRuleContext<conditionParser::Pre_abexpsContext>(0);
}

tree::TerminalNode* conditionParser::Pre_a_andContext::RSQUARE() {
  return getToken(conditionParser::RSQUARE, 0);
}

conditionParser::Pre_a_andContext::Pre_a_andContext(Pre_abexp_atomContext *ctx) { copyFrom(ctx); }


std::any conditionParser::Pre_a_andContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitPre_a_and(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Pre_a_parensContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::Pre_a_parensContext::LPAR() {
  return getToken(conditionParser::LPAR, 0);
}

conditionParser::Pre_abexp_atomContext* conditionParser::Pre_a_parensContext::pre_abexp_atom() {
  return getRuleContext<conditionParser::Pre_abexp_atomContext>(0);
}

tree::TerminalNode* conditionParser::Pre_a_parensContext::RPAR() {
  return getToken(conditionParser::RPAR, 0);
}

conditionParser::Pre_a_parensContext::Pre_a_parensContext(Pre_abexp_atomContext *ctx) { copyFrom(ctx); }


std::any conditionParser::Pre_a_parensContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitPre_a_parens(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Pre_a_eqContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::Pre_a_eqContext::EQ() {
  return getToken(conditionParser::EQ, 0);
}

std::vector<conditionParser::Pre_aexpContext *> conditionParser::Pre_a_eqContext::pre_aexp() {
  return getRuleContexts<conditionParser::Pre_aexpContext>();
}

conditionParser::Pre_aexpContext* conditionParser::Pre_a_eqContext::pre_aexp(size_t i) {
  return getRuleContext<conditionParser::Pre_aexpContext>(i);
}

conditionParser::Pre_a_eqContext::Pre_a_eqContext(Pre_abexp_atomContext *ctx) { copyFrom(ctx); }


std::any conditionParser::Pre_a_eqContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitPre_a_eq(this);
  else
    return visitor->visitChildren(this);
}
conditionParser::Pre_abexp_atomContext* conditionParser::pre_abexp_atom() {
  Pre_abexp_atomContext *_localctx = _tracker.createInstance<Pre_abexp_atomContext>(_ctx, getState());
  enterRule(_localctx, 6, conditionParser::RulePre_abexp_atom);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(110);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<conditionParser::Pre_a_trueContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(87);
      match(conditionParser::TRUE);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<conditionParser::Pre_a_parensContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(88);
      match(conditionParser::LPAR);
      setState(89);
      pre_abexp_atom();
      setState(90);
      match(conditionParser::RPAR);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<conditionParser::Pre_a_eqContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(92);
      match(conditionParser::EQ);
      setState(93);
      pre_aexp(0);
      setState(94);
      pre_aexp(0);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<conditionParser::Pre_a_eqmodContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(96);
      match(conditionParser::EQMOD);
      setState(97);
      pre_aexp(0);
      setState(98);
      pre_aexp(0);
      setState(99);
      pre_aexp(0);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<conditionParser::Pre_a_andContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(101);
      match(conditionParser::AND);
      setState(102);
      match(conditionParser::LSQUARE);
      setState(103);
      pre_abexps();
      setState(104);
      match(conditionParser::RSQUARE);
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<conditionParser::Pre_a_eqopContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(106);
      pre_aexp(0);
      setState(107);
      match(conditionParser::EQOP);
      setState(108);
      pre_aexp(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pre_aexpContext ------------------------------------------------------------------

conditionParser::Pre_aexpContext::Pre_aexpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t conditionParser::Pre_aexpContext::getRuleIndex() const {
  return conditionParser::RulePre_aexp;
}

void conditionParser::Pre_aexpContext::copyFrom(Pre_aexpContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Pre_aexp_listlimbsContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::Pre_aexp_listlimbsContext::ULIMBS() {
  return getToken(conditionParser::ULIMBS, 0);
}

conditionParser::NumContext* conditionParser::Pre_aexp_listlimbsContext::num() {
  return getRuleContext<conditionParser::NumContext>(0);
}

tree::TerminalNode* conditionParser::Pre_aexp_listlimbsContext::VAR() {
  return getToken(conditionParser::VAR, 0);
}

conditionParser::ListContext* conditionParser::Pre_aexp_listlimbsContext::list() {
  return getRuleContext<conditionParser::ListContext>(0);
}

conditionParser::Pre_aexp_listlimbsContext::Pre_aexp_listlimbsContext(Pre_aexpContext *ctx) { copyFrom(ctx); }


std::any conditionParser::Pre_aexp_listlimbsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitPre_aexp_listlimbs(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Pre_a_varContext ------------------------------------------------------------------

conditionParser::VarContext* conditionParser::Pre_a_varContext::var() {
  return getRuleContext<conditionParser::VarContext>(0);
}

conditionParser::Pre_a_varContext::Pre_a_varContext(Pre_aexpContext *ctx) { copyFrom(ctx); }


std::any conditionParser::Pre_a_varContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitPre_a_var(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Pre_a_scContext ------------------------------------------------------------------

conditionParser::Simple_constContext* conditionParser::Pre_a_scContext::simple_const() {
  return getRuleContext<conditionParser::Simple_constContext>(0);
}

conditionParser::Pre_a_scContext::Pre_a_scContext(Pre_aexpContext *ctx) { copyFrom(ctx); }


std::any conditionParser::Pre_a_scContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitPre_a_sc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Pre_aexp_parentsContext ------------------------------------------------------------------

tree::TerminalNode* conditionParser::Pre_aexp_parentsContext::LPAR() {
  return getToken(conditionParser::LPAR, 0);
}

conditionParser::Pre_aexpContext* conditionParser::Pre_aexp_parentsContext::pre_aexp() {
  return getRuleContext<conditionParser::Pre_aexpContext>(0);
}

tree::TerminalNode* conditionParser::Pre_aexp_parentsContext::RPAR() {
  return getToken(conditionParser::RPAR, 0);
}

conditionParser::Pre_aexp_parentsContext::Pre_aexp_parentsContext(Pre_aexpContext *ctx) { copyFrom(ctx); }


std::any conditionParser::Pre_aexp_parentsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<conditionParserVisitor*>(visitor))
    return parserVisitor->visitPre_aexp_parents(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Pre_a_instContext ------------------------------------------------------------------

std::vector<conditionParser::Pre_aexpContext *> conditionParser::Pre_a_instContext::pre_aexp() {
  return getRuleContexts<conditionParser::Pre_aexpContext>();
}

conditionParser::Pre_aexpContext* conditionParser::Pre_a_instContext::pre_aexp(size_t i) {
  return getRuleContext<conditionParser::Pre_aexpContext>(i);
}

tree::TerminalNode* conditionParser::Pre_a_instContext::INST_ADD() {
  return getToken(conditionParser::INST_ADD, 0);
}

tree::TerminalNode* conditionParser::Pre_a_instContext::INST_SUB() {
  return getToken(conditionParser::INST_SUB, 0);
}

tree::TerminalNode* conditionParser::Pre_a_instContext::INST_MUL() {
  return getToken(conditionParser::INST_MUL, 0);
}
